--- a/index.html
+++ b/index.html
@@ -1,14 +1,69 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./src/output.css" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./src/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>Template tailwind test</title>
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline bg-blue-500 text-white p-4">
-    Hello world!
-  </h1>
+
+<body class="flex flex-col min-h-screen">
+
+    <header class="flex items-center justify-between p-5  border-gray-300 bg-teal-500 b-bl rounded-bl-3xl rounded-br-3xl
+
+    ">
+        <div>
+            <p class="text-xl font-normal text-blue-100">Hello</p>
+            <h1 class="text-3xl text-white">Jamie Ventura</h1>
+        </div>
+        <i class="fa-solid fa-bell text-4xl text-white"></i>
+    </header>
+
+    <main class="flex-grow">
+        <div class="container mx-auto p-5">
+
+
+
+            <div class="grid gap-4 mt-3">
+                <h1 class="text-2xl font-semibold ">Interactive lessons</h1>
+                 <div class="grid gap-4 grid-cols-2 ">
+                    <div class="bg-gray-200 p-4 rounded-lg shadow">
+                        <h3 class="text-lg font-bold">About Me</h3>
+                        <p class="text-gray-600">I am a web developer based in the UK</p>
+                    </div>
+                    <div class="bg-gray-200 p-4 rounded-lg shadow">
+                        <h3 class="text-lg font-bold">My Skills</h3>
+                        <p class="text-gray-600">I am skilled in HTML, CSS, JavaScript, PHP and MySQL</p>
+                    </div>
+                 </div>
+
+
+            </div>
+        </div>
+    </main>
+
+    <footer class="grid gap-4 sm:grid-cols-8">
+
+        <!-- <div class="min-h-[100px] rounded-lg bg-orange-500 shadow sm:col-span-2 sm:block hidden">
+
+        </div> -->
+
+        <div class="min-h-[100px] shadow sm:col-span-8 gap-4 flex justify-around items-center border-t-2 border-gray-300">
+            <i class="fa-solid fa-house text-3xl text-white active: bg-teal-500 p-3 rounded-full"></i>
+            <i class="fa-solid fa-book-open text-gray-400 text-3xl "></i>
+            <i class="fa-solid fa-message text-gray-400 text-3xl"></i>
+            <i class="fa-solid fa-user text-gray-400 text-3xl"></i>
+        </div>
+
+        <!-- <div class="min-h-[100px] rounded-lg bg-purple-500 shadow sm:col-span-2 sm:block hidden">
+
+        </div> -->
+
+    </footer>
 </body>
 </html>
