feat(ui): make footer sticky
Updated the footer to remain fixed at the bottom of the viewport, improving accessibility and layout consistency. Ensured proper spacing and responsiveness across different screen sizes.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         </div> -->
 
-        <div class="min-h-[100px] shadow sm:col-span-8 gap-4 flex justify-around items-center border-t-2 border-gray-300">
+        <div class="min-h-[100px] shadow col-span-8 sm:sticky sm:bottom-0  gap-4 flex justify-around items-center border-t-2 border-gray-300">
             <i class="fa-solid fa-house text-3xl text-white active: bg-teal-500 p-3 rounded-full"></i>
             <i class="fa-solid fa-book-open text-gray-400 text-3xl "></i>
             <i class="fa-solid fa-message text-gray-400 text-3xl"></i>
