feat(ui): design landing page sections
Added visual components to the landing page, including:
- **Featured Languages** section with country images
- **Interactive Lessons** tab design
- **Quizzes** tab design

These tabs are currently static and non-functional, serving as a design prototype for future development.

--- a/index.html
+++ b/index.html
@@ -14,50 +14,83 @@
 
 <body class="flex flex-col min-h-screen">
 
-    <header class="flex items-center justify-between p-5  border-gray-300 bg-teal-500 b-bl rounded-bl-3xl rounded-br-3xl
-
-    ">
+    <header class="flex items-center justify-between px-5 py-3  border-gray-300 bg-teal-500 b-bl rounded-bl-3xl rounded-br-3xl ">
         <div>
-            <p class="text-xl font-normal text-blue-100">Hello</p>
-            <h1 class="text-3xl text-white">Jamie Ventura</h1>
+            <p class="text-base font-normal text-gray-200">Hello</p>
+            <h1 class="text-xl text-white font-semibold">Jamie Ventura</h1>
         </div>
-        <i class="fa-solid fa-bell text-4xl text-white"></i>
+        <i class="fa-solid fa-bell text-2xl text-white"></i>
     </header>
 
     <main class="flex-grow">
-        <div class="container mx-auto p-5">
+        <div class="container mx-auto px-5 py-4 grid gap-4"> <!--PROFILE-->
 
-
-
-            <div class="grid gap-4 mt-3">
-                <h1 class="text-2xl font-semibold ">Interactive lessons</h1>
-                 <div class="grid gap-4 grid-cols-2 ">
-                    <div class="bg-gray-200 p-4 rounded-lg shadow">
-                        <h3 class="text-lg font-bold">About Me</h3>
-                        <p class="text-gray-600">I am a web developer based in the UK</p>
+            <div class="grid gap-2">
+                <h1 class="text-xl font-semibold">Featured Languages</h1>
+                <div class="grid grid-cols-3">
+                    <div class=" bg-orange-100 rounded-full w-28 h-28 flex flex-col items-center justify-center gap-1">
+                        <img class="w-14 " src="./assets/img/china.png" alt="">
+                        <p class="text-sm text-gray-600">Mandarin</p>
                     </div>
-                    <div class="bg-gray-200 p-4 rounded-lg shadow">
-                        <h3 class="text-lg font-bold">My Skills</h3>
-                        <p class="text-gray-600">I am skilled in HTML, CSS, JavaScript, PHP and MySQL</p>
+                    <div class=" bg-orange-100 rounded-full w-28 h-28 flex flex-col items-center justify-center gap-1">
+                        <img class="w-14" src="./assets/img/spain.png" alt="">
+                        <p class="text-sm text-gray-600">Spanish</p>
                     </div>
-                 </div>
-
+                    <div class=" bg-orange-100 rounded-full w-28 h-28 flex flex-col items-center justify-center gap-1">
+                        <img class="w-14" src="./assets/img/japan.png" alt="">
+                        <p class="text-sm text-gray-600">Japanese</p>
+                    </div>
+                </div>
 
             </div>
+
+            <!-- LINE -->
+            <div class="bg-slate-200 w-full h-0.5"></div>
+
+            <div class="grid grid-cols-[2fr_1fr] bg-orange-100 p-4 rounded-3xl shadow items-center gap-4">
+                <div>
+                    <h3 class="text-lg font-semibold">Interactive Lessons</h3>
+                    <p class="text-sm text-gray-600">Progress: 40%</p>
+                </div>
+                <div class="bg-orange-400 p-2 rounded-3xl text-white text-center">
+                    <p>Continue</p>
+                </div>
+            </div>
+
+
+            <div class="grid grid-cols-[2fr_1fr] bg-orange-100 p-4 rounded-3xl shadow items-center gap-4">
+                <div>
+                    <h3 class="text-lg font-semibold">Gamified Quizzes</h3>
+                    <p class="text-sm text-gray-600">Badges Earned: 5</p>
+                </div>
+                <div class="bg-orange-400 p-2 rounded-3xl text-white text-center">
+                    <p>Play Now</p>
+                </div>
+            </div>
+
+                <!--COMMUNITY EXCHANGE-->
+            <div class="bg-orange-100 p-4 rounded-3xl shadow">
+                <h3 class="text-lg font-semibold">Community Exchange</h3>
+                <p class="text-sm text-gray-600">Connect with native speakers for real-time practice.</p>
+                <div class="bg-orange-400 p-2 rounded-3xl text-white text-center m-2">
+                    <p>Start Exchange</p>
+                </div>
+            </div>
+
         </div>
     </main>
 
     <footer class="grid gap-4 sm:grid-cols-8">
 
-        <!-- <div class="min-h-[100px] rounded-lg bg-orange-500 shadow sm:col-span-2 sm:block hidden">
+        <div class="min-h-[100px] rounded-lg bg-orange-500 shadow sm:col-span-2 sm:block hidden">
 
-        </div> -->
+        </div>
 
-        <div class="min-h-[100px] shadow col-span-8 sm:sticky sm:bottom-0  gap-4 flex justify-around items-center border-t-2 border-gray-300">
-            <i class="fa-solid fa-house text-3xl text-white active: bg-teal-500 p-3 rounded-full"></i>
-            <i class="fa-solid fa-book-open text-gray-400 text-3xl "></i>
-            <i class="fa-solid fa-message text-gray-400 text-3xl"></i>
-            <i class="fa-solid fa-user text-gray-400 text-3xl"></i>
+        <div class="min-h-20 shadow col-span-8 gap-4 flex justify-around items-center border-t-2 border-gray-300">
+            <i class="fa-solid fa-house text-2xl text-white active: bg-teal-500 p-3 rounded-full"></i>
+            <i class="fa-solid fa-book-open text-gray-400 text-2xl "></i>
+            <i class="fa-solid fa-message text-gray-400 text-2xl"></i>
+            <i class="fa-solid fa-user text-gray-400 text-2xl"></i>
         </div>
 
         <!-- <div class="min-h-[100px] rounded-lg bg-purple-500 shadow sm:col-span-2 sm:block hidden">
