--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <title>Template tailwind test</title>
+    <title>tailwind test</title>
 </head>
 
 <body class="flex flex-col h-screen lg:min-h-screen xl:min-h-screen lg:overflow-visible xl:overflow-visible overflow-hidden">
@@ -42,6 +42,7 @@
             SIGN IN
         </button>
     </header>
+
 
 
 
